@@ -781,6 +781,13 @@ void darshan_log_close(darshan_fd fd)
 
 void darshan_log_print_version_warnings(const char *version_string)
 {
+    if(strcmp(version_string, "3.20") == 0)
+    {
+        printf("# WARNING: Darshan logs generated by runtime version 3.2.0 likely exhibit some corruption in counter values.\n");
+        printf("#          This bug clearly results in bogus values for some COMMON_ACCESS counters (POSIX, MPIIO, H5 modules),\n");
+        printf("#          but preceding data may also be corrupted.\n");
+    }
+
     return;
 }
 
@@ -897,7 +904,8 @@ static int darshan_log_get_header(darshan_fd fd)
         fd->state->get_namerecs = darshan_log_get_namerecs_3_00;
     }
     else if((strcmp(fd->version, "3.10") == 0) ||
-            (strcmp(fd->version, "3.20") == 0))
+            (strcmp(fd->version, "3.20") == 0) ||
+            (strcmp(fd->version, "3.21") == 0))
     {
         fd->state->get_namerecs = darshan_log_get_namerecs;
     }
